Add new route to book api, delete /books/{id} (#21)
* Add soft delete route for books and corresponding unit test
* Add test for 404 response on DELETE request with empty book ID
* Add tests for invalid bookID and failure to call database on DELETE route and corresponding code
* Update openapi.yml with DELETE endpoint

---------
