# test_app.py
@@ -240,3 +240,76 @@ def test_book_database_is_initialized_for_specific_book_route(client):
         response = client.get("/books/1")
         assert response.status_code == 500
         assert "Book collection not initialized" in response.get_json()["error"]
+
+# ------------------------ Tests for DELETE --------------------------------------------
+# Mock book database object
+
+books_database = [
+        {
+            "id": "1",
+            "title": "The Great Adventure",
+            "synopsis": "A thrilling adventure through the jungles of South America.",
+            "author": "Jane Doe",
+            "links": {
+                "self": "/books/1",
+                "reservations": "/books/1/reservations",
+                "reviews": "/books/1/reviews"
+            },
+            "state": "active"
+        },
+        {
+            "id": "2",
+            "title": "Mystery of the Old Manor",
+            "synopsis": "A detective story set in an old manor with many secrets.",
+            "author": "John Smith",
+            "links": {
+                "self": "/books/2",
+                "reservations": "/books/2/reservations",
+                "reviews": "/books/2/reviews"
+            },
+            "state": "active"
+        },
+        {
+            "id": "3",
+            "title": "The Science of Everything",
+            "synopsis": "An in-depth look at the scientific principles that govern our world.",
+            "author": "Alice Johnson",
+            "links": {
+                "self": "/books/3",
+                "reservations": "/books/3/reservations",
+                "reviews": "/books/3/reviews"
+            },
+            "state": "deleted"
+        }
+    ]
+
+def test_book_is_soft_deleted_on_delete_request(client):
+    with patch("app.books", books_database):
+        # Send DELETE request
+        book_id = '1'
+        response = client.delete(f"/books/{book_id}")
+
+        assert response.status_code == 204
+        assert response.data == b''
+        # check that the book's state has changed to deleted
+        assert books_database[0]['state'] == 'deleted'
+
+
+def test_delete_empty_book_id(client):
+    book_id =""
+    response = client.delete(f"/books/{book_id}")
+    assert response.status_code == 404
+    assert response.content_type == "application/json"
+    assert "404 Not Found" in response.get_json()["error"]
+
+def test_delete_invalid_book_id(client):
+    response = client.delete("/books/12341234")
+    assert response.status_code == 404
+    assert response.content_type == "application/json"
+    assert "Book not found" in response.get_json()["error"]
+
+def test_book_database_is_initialized_for_delete_book_route(client):
+    with patch("app.books", None):
+        response = client.delete("/books/1")
+        assert response.status_code == 500
+        assert "Book collection not initialized" in response.get_json()["error"]
